crates/sdk-core/tests/workflows_trybuild/async_query_fail.stderr
error: #[query] methods must not be async (queries are synchronous)
  --> tests/workflows_trybuild/async_query_fail.rs:14:9
   |
14 |     pub async fn get_value(&self, _ctx: &WorkflowContext) -> u32 {
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
